--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-providers": "^2.0.0",
+    "ng-hcaptcha": "^2.3.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.9.1",
