--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -44,8 +44,10 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
+                "node_modules/primeicons/primeicons.css",
               "node_modules/leaflet/dist/leaflet.css",
               "node_modules/leaflet-defaulticon-compatibility/dist/leaflet-defaulticon-compatibility.webpack.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
