--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -57,7 +57,7 @@
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "node_modules/leaflet/dist/leaflet.js",
-              "node_modules/leaflet-providers/leaflet-providers.js"
+              "node_modules/leaflet-providers/leaflet-providers.js",
             ]
           },
           "configurations": {
