--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-providers": "^2.0.0",
-    "ng-hcaptcha": "^2.3.1",
+    "ng-recaptcha": "^12.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.9.1",
@@ -38,6 +38,7 @@
     "@angular-devkit/build-angular": "^16.2.2",
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/grecaptcha": "^3.0.9",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.12",
     "css-loader": "^7.1.2",
